Fixed both the routing and horizontal scrollbar

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,7 @@
 video {
     object-fit: cover;
-    width: 100vw;
     height: 100vh;
+    width: 100%;
     position: fixed;
     z-index: -3;
 }
@@ -25,7 +25,7 @@ video {
 }
 
 .hero-parallax {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
